--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -H 0.0.0.0",
-    "build": "next build --no-turbo",
+    "build": "TURBOPACK=0 NEXT_DISABLE_LIGHTNINGCSS=1 next build",
     "start": "next start -p $PORT",
     "lint": "eslint"
   },
