--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "jose": "^5.9.6",
     "lucide-react": "^0.554.0",
+    "lightningcss": "^1.25.1",
     "mssql": "^12.1.1",
     "next": "16.0.3",
     "react": "19.2.0",
