--- a/.github/workflows/main_inventorywebapp.yml
+++ b/.github/workflows/main_inventorywebapp.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - inventorywebapp
 
 on:
@@ -13,35 +10,53 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+          cache: 'npm'
 
-      - name: Upload artifact for deployment job
+      - name: Install dependencies
+        run: npm ci
+
+      # Disable Turbopack to avoid LightningCSS native issues
+      - name: Build Next.js app
+        run: npm run build
+        env:
+          NEXT_DISABLE_TURBOPACK: 1
+
+      # Prepare deployment artifact
+      - name: Prepare deployment package
+        run: |
+          mkdir deploy
+          cp -R .next public package.json package-lock.json node_modules deploy/
+
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: deploy
+
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
-      - name: Download artifact from build job
+      - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -49,11 +64,9 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_8629C4C6B9F648AA91A33B58575A0DDD }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_45402637D67041BB8148A8F6B73D6013 }}
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'inventorywebapp'
-          slot-name: 'Production'
+          app-name: inventorywebapp
+          slot-name: Production
           package: .
-          
