--- a/.github/workflows/main_inventorywebapp.yml
+++ b/.github/workflows/main_inventorywebapp.yml
@@ -1,3 +1,6 @@
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
 name: Build and deploy Node.js app to Azure Web App - inventorywebapp
 
 on:
@@ -43,7 +46,6 @@ jobs:
           name: node-app
           path: deploy
 
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -63,6 +65,28 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_80145B2886564B2C9208E1C31F98495B }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_8629C4C6B9F648AA91A33B58575A0DDD }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_45402637D67041BB8148A8F6B73D6013 }}
+
+      # 🔴 CRITICAL FIX: Disable Oryx build on Azure
+      - name: Configure App Settings
+        uses: azure/appservice-settings@v1
+        with:
+          app-name: inventorywebapp
+          slot-name: Production
+          app-settings-json: |
+            [
+              {
+                "name": "SCM_DO_BUILD_DURING_DEPLOYMENT",
+                "value": "false"
+              },
+              {
+                "name": "WEBSITE_RUN_FROM_PACKAGE",
+                "value": "1"
+              },
+              {
+                "name": "NODE_ENV",
+                "value": "production"
+              }
+            ]
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
